--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
-    <link rel = "stylesheet" href = "css/tillie.css" > 
-    
-    <!-- <link rel="stylesheet" href="css/student1.css"> -->
-    <!-- <link rel="stylesheet" href="css/student2.css"> -->
-    <!-- <link rel="stylesheet" href="css/student3.css"> -->
+    <link rel="stylesheet" href="css/alana.css">
     <title>Week 2 Discussion</title>
 </head>
 <body>
-    <a href="#main">Skip To Main Content</a>
     <header>
         <nav>
             <ul>
@@ -32,9 +27,9 @@
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
-            <li>It is Fun </li>
-            <li>It is cool</li>
-            <li>It is awesome</li>
+            <li>A</li>
+            <li>B</li>
+            <li>C</li>
         </ul>
     </main>
     
